fix: overflow and font-size layout

--- a/frontend/src/layouts/ContentLayout/ContentLayout.module.css
+++ b/frontend/src/layouts/ContentLayout/ContentLayout.module.css
@@ -1,3 +1,8 @@
 .layout {
-    height: 100vh;
+    max-height: 100vh;
+    overflow: hidden;
+}
+
+.main {
+    font-size: 18px;
 }
